# gdtools

./: .Rbuildignore  .gitignore  .travis.yml  404.html  DESCRIPTION  LICENSE-text.html  NAMESPACE  NEWS  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  cleanup  configure  configure.ac  cran-comments.md  gdtools.Rproj  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  pkgdown.yaml
R/: RcppExports.R  cpp-proxies.R  font-caching.R  font_family_exists.R  font_metrics.R  font_set.R  fontconfig.R  fonts.R  gdtools.R  helpers-locale.R  html_raster.R  liberation-sans.R  liberation.R  load.R  m_str_extents.R  png_get_base64.R  raster.R  str-metrics.R  str_extents.R  sysdata.rda  write_raster.R
data-src/: gfonts-data.R
dev/: LICENSE-text.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
dev/news/: index.html  index.md
dev/reference/: addGFontHtmlDependency.html  addGFontHtmlDependency.md  check_gfonts.html  check_gfonts.md  dummy_setup.html  dummy_setup.md  font_family_exists.html  font_family_exists.md  font_google.html  font_google.md  font_liberation.html  font_liberation.md  font_set.html  font_set.md  font_set_auto.html  font_set_auto.md  font_set_liberation.html  font_set_liberation.md  fonts_cache_dir.html  fonts_cache_dir.md  gfontHtmlDependency.html  gfontHtmlDependency.md  index.html  index.md  install_gfont_script.html  install_gfont_script.md  installed_gfonts.html  installed_gfonts.md  liberationmonoHtmlDependency.html  liberationmonoHtmlDependency.md  liberationsansHtmlDependency.html  liberationsansHtmlDependency.md  liberationserifHtmlDependency.html  liberationserifHtmlDependency.md  m_str_extents.html  m_str_extents.md  match_family.html  match_family.md  register_gfont.html  register_gfont.md  (+17 more)
inst/include/: gdtools.h  gdtools_RcppExports.h  gdtools_types.h
man/: addGFontHtmlDependency.Rd  check_gfonts.Rd  dummy_setup.Rd  font_family_exists.Rd  font_google.Rd  font_liberation.Rd  font_metrics.Rd  font_set.Rd  font_set_auto.Rd  font_set_liberation.Rd  fontconfig_reinit.Rd  fonts_cache_dir.Rd  gfontHtmlDependency.Rd  glyphs_match.Rd  has_internet.Rd  html_raster.Rd  install_gfont_script.Rd  installed_gfonts.Rd  liberationmonoHtmlDependency.Rd  liberationsansHtmlDependency.Rd  liberationserifHtmlDependency.Rd  m_str_extents.Rd  match_family.Rd  png_as_base64.Rd  png_get_base64.Rd  raster_str.Rd  raster_write.Rd  register_gfont.Rd  register_liberationmono.Rd  register_liberationsans.Rd  register_liberationserif.Rd  set_dummy_conf.Rd  str_extents.Rd  str_metrics.Rd  strings_sizes.Rd  sys_fonts.Rd  version_cairo.Rd  write_raster.Rd
news/: index.html  index.md
reference/: addGFontHtmlDependency.html  addGFontHtmlDependency.md  check_gfonts.html  dummy_setup.html  dummy_setup.md  font_family_exists.html  font_google.html  font_google.md  font_liberation.html  font_liberation.md  font_set.html  font_set.md  font_set_auto.html  font_set_auto.md  font_set_liberation.html  font_set_liberation.md  fontconfig_reinit.html  fonts_cache_dir.html  fonts_cache_dir.md  gfontHtmlDependency.html  gfontHtmlDependency.md  glyphs_match.html  has_internet.html  index.html  index.md  install_gfont_script.html  install_gfont_script.md  installed_gfonts.html  installed_gfonts.md  liberationmonoHtmlDependency.html  liberationmonoHtmlDependency.md  liberationsansHtmlDependency.html  liberationsansHtmlDependency.md  liberationserifHtmlDependency.html  liberationserifHtmlDependency.md  m_str_extents.html  m_str_extents.md  match_family.html  match_family.md  raster_str.html  (+21 more)
src/: CairoContext.cpp  FamiliesContext.cpp  FontFileContext.cpp  FontMetric.cpp  Makevars.in  Makevars.win  RcppExports.cpp  TextExtents.cpp  TextExtents.h  font_metrics.cpp  gdtools.cpp  gdtools_types.h  get_font_metrics.cpp  png_to_base64.cpp  rasterB64.cpp  raster_to_base64.cpp  registerDynamicSymbol.c  sys_fonts.cpp  versions.cpp
src/tests/: sysdeps.c
tests/testthat/: helper-fontconfig.R  test-font-set.R  test-font_family_exists.R  test-fonts.R  test-locale.R  test-raster.R  test-str_extents.R  test-str_metrics.R  test-utils.R
tools/: winlibs.R
vignettes/: sys_font.Rmd
